...
            android:id="@+id/root_toolbar"
            android:background="@color/colorPrimary"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title_custom_toolbar"
            android:layout_marginTop="6dp"
            android:layout_marginLeft="20dp"
            android:layout_centerVertical="true"
            android:textColor="#fff"
            android:textSize="17sp"
            android:textStyle="bold"
...
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_shopping_cart_white_24dp"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:id="@+id/cart_main_activity"
                android:layout_centerVertical="true"
                android:layout_marginRight="45dp"
                android:paddingLeft="5dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
...
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="99"
                    android:textColor="#ffff"
                    android:gravity="center"
                    android:id="@+id/cart_quantity_main_activity"
                    android:textStyle="bold"
                    android:textSize="10sp"/>
            </RelativeLayout>



...
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@mipmap/ic_more_vert_white_24dp"
            android:layout_alignParentRight="true"
            android:id="@+id/overflow_main_activity"
            android:layout_centerVertical="true"
            android:paddingRight="13dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>

...
