<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#eeee"
    android:orientation="vertical"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ivonneortega.ecommerceapp.DetailView.DetailViewActivity"
    tools:showIn="@layout/activity_detail_view">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#38474f"
            android:gravity="center">

            <Button
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="Add to wishlist"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:textColor="#ffff"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimaryDarkProductPage"
                android:id="@+id/addToWishlist_detail_view"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/colorAuxProductPage"
                android:layout_height="wrap_content"
                android:text="add to cart"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="#ffff"
                android:id="@+id/detail_view_add_to_cart"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="#ffff"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/detail_view_image"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BRAND"
                android:layout_below="@id/detail_view_image"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="20dp"
                android:textSize="25sp"
                android:textStyle="bold"
                android:id="@+id/brand_detail_view"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/brand_detail_view"
                    android:layout_alignBottom="@id/brand_detail_view"
                    android:text="MODEL"
                    android:id="@+id/model_detail_view"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/type_of_shoe_detail_view"
                    android:layout_below="@id/brand_detail_view"
                    android:text="Type of shoe"
                    android:layout_alignLeft="@id/brand_detail_view"
                    android:layout_marginBottom="20dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$100.0"
                    android:id="@+id/price_detail_view"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@id/brand_detail_view"
                    android:layout_below="@id/brand_detail_view"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/grey"
                    android:textColor="#fff"/>
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:background="#ffff"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="vdfvdfvdfvdfvdfvdfvdfvdfvdvfdvdfv"
                android:layout_marginTop="20dp"
                android:id="@+id/description_detail_view"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#ffff"
            android:orientation="vertical"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Size:"
                    android:layout_marginTop="20dp"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey"
                    android:alpha="0.2"
                    android:layout_marginRight="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/size_linear_layout_detail_view"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <Button
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:text="6"
                        android:id="@+id/size6"
                        android:layout_marginRight="10dp"
                        android:background="#eeee"/>

                    <Button
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:text="7"
                        android:id="@+id/size7"
                        android:layout_marginRight="10dp"

                        android:background="#eeee"/>
                    <Button
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:text="8"
                        android:id="@+id/size8"
                        android:layout_marginRight="10dp"

                        android:background="#eeee"/>
                    <Button
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:text="9"
                        android:id="@+id/size9"
                        android:layout_marginRight="10dp"

                        android:background="#eeee"/>
                    <Button
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:text="10"
                        android:id="@+id/size10"
                        android:layout_marginRight="10dp"

                        android:background="#eeee"/>
                    <Button
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:text="11"
                        android:id="@+id/size11"
                        android:background="#eeee"/>


                </LinearLayout>



            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:id="@+id/addToCart_detail_view2"
            android:text="Add to cart"
            android:textColor="#ffff"
            android:background="@color/colorPrimaryDarkProductPage"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>

</ScrollView>
