<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ivonneortega.ecommerceapp.Wishlist.WishlistActivity"
    tools:showIn="@layout/activity_wishlist">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No Items in Wishlist"
        android:id="@+id/wishlist_text_empty"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_view_wishlist_activity"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
    </android.support.v7.widget.RecyclerView>

</FrameLayout>
