<resources>
    <string name="app_name">ecommerceApp</string>
    <string name="action_settings">Settings</string>
    <string name="search_view">Search...</string>
    <string name="sort_by">SORT BY</string>
    <string name="action_wishlist">Wishlist</string>
    <string name="products">PRODUCTS</string>
    <string name="checkout">Checkout</string>

    <string-array name="sort_by_dialog">
        <item>Brand</item>
        <item>Type</item>
        <item>Category</item>
        <item>Price</item>
    </string-array>
    <string name="title_activity_detail_view">DetailViewActivity</string>

    <string-array name="shoes_sizes">
        <item>6.0</item>
        <item>6.5</item>
        <item>7.0</item>
        <item>7.5</item>
        <item>8.0</item>
        <item>8.5</item>
        <item>9.0</item>
        <item>9.5</item>
        <item>10.0</item>
        <item>10.5</item>
        <item>11.0</item>
    </string-array>
    <string name="title_activity_cart_view">CartViewActivity</string>
    <string name="title_activity_wishlist">WishlistActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
