...
        android:id="@+id/linear_layout_cart_view"
        android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:id="@+id/recycler_view_cart_activity"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="price"
            android:id="@+id/priceText_checkout"
            android:layout_alignParentRight="true"
            android:textSize="25sp"
            android:textColor="@color/colorPrimaryCheckoutPage"
            android:textStyle="bold"/>


...
