<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_wishlist"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ivonneortega.ecommerceapp.Wishlist.WishlistActivity"
    tools:showIn="@layout/activity_wishlist">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_view_wishlist_activity">
    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>
